--- a/train-sensor/build.gradle
+++ b/train-sensor/build.gradle
@@ -1,3 +1,4 @@
+plugins { id "org.sonarqube" version "2.2" }
 dependencies {
     compile project(':train-interfaces')
     compile project(':train-user')
@@ -5,3 +6,4 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.mockito:mockito-core:2.7.16'
 }
+
